# speakr

./: .cursorrules  .editorconfig  .env.example  .envrc  .gitignore  .markdownlint.json  .markdownlint.yaml  .pre-commit-config.yaml  .prettierrc.yml  .rustfmt.toml  AGENT.md  Cargo.toml  DEVELOPMENT.md  README.md  book.toml  devenv.nix  devenv.yaml  rust-toolchain.toml
.cursor/rules/: .markdownlint.yaml  AGENT.md  agent-communication-style.mdc  agent-context7-docs.mdc  agent-rule-compression.mdc  agent-rule-creation.mdc  context7.mdc  git-auto-commit-v1.md  git-auto-commit.mdc  git-avoid-interactive-pager.mdc  mdbook-theme.mdc  mermaid-diagrams.mdc  rust-visibility-patterns.mdc  security-semgrep-mcp.mdc  speakr-development.mdc  tauri.mdc  test-isolation.mdc  tool-context7.mdc
.cursor/rules/nix/: devenv-basic-config.mdc  devenv-containers.mdc  devenv-languages.mdc  devenv-processes.mdc  devenv-tools.mdc  nix-build-phases.mdc  nix-dependency-management.mdc  nix-documentation.mdc  nix-experimental-features.mdc  nix-no-bazel.mdc  nix-package-declaration.mdc  nix-security.mdc  nix-store-operations.mdc  nix-testing.mdc
.cursor/rules/project-steering/: refactoring-insights.mdc  rust-tdd.mdc  speakr-1_product.mdc  speakr-2_structure.mdc  speakr_nfr-integration.mdc  tauri-command-wrappers.mdc  tauri-tdd-practices.mdc  tauri.mdc
.cursor/rules/rust/: rust-async.mdc  rust-cargo.mdc  rust-clap.mdc  rust-documentation.mdc  rust-error-handling.mdc  rust-observability.mdc  rust-ownership.mdc  rust-performance.mdc  rust-safety.mdc  rust-style.mdc  rust-testing.mdc  rust-type-system.mdc
.cursor/rules/tools/: tool-time.mdc
.github/workflows/: docs.yml  test.yml
.github/workflows/install-mdbook/: action.yml
.github/workflows/setup-devenv/: action.yml
.kiro/hooks/: docs-sync-hook.kiro.hook
.kiro/specs/audio-capture/: requirements.md
.kiro/specs/auto-update/: design.md  requirements.md
.kiro/specs/fr-1-global-hotkey/: design.md  tasks.md
.kiro/specs/fr-2-audio-capture/: design.md  tasks.md
.kiro/specs/fr-3-transcription/: design.md  requirements.md  tasks.md
.kiro/specs/fr-4-text-injection/: design.md  requirements.md
.kiro/specs/fr-5-injection-fallback/: design.md  tasks.md
.kiro/specs/fr-6-settings-ui/: design.md  tasks.md
.kiro/specs/fr-7-status-events/: requirements.md  tasks.md
.kiro/specs/fr-8-settings-persistence/: tasks.md
.kiro/specs/fr-9-auto-update/: tasks.md
.kiro/specs/global-hotkey/: design.md  requirements.md  tasks.md
.kiro/specs/injection-fallback/: design.md  requirements.md  tasks.md
.kiro/specs/nfr-footprint/: design.md  requirements.md  tasks.md
.kiro/specs/nfr-latency/: design.md  requirements.md  tasks.md
.kiro/specs/nfr-reliability/: design.md  requirements.md  tasks.md
.kiro/specs/settings-persistence/: design.md  requirements.md  tasks.md
.kiro/specs/settings-ui/: design.md  requirements.md  tasks.md
.kiro/specs/status-events/: design.md  tasks.md
.kiro/specs/text-injection/: tasks.md
.kiro/steering/: nfr-integration.md  preferences.md  product.md  specs.md  structure.md  tauri-tdd-practices.md  tech.md
book/: book.toml
book/theme/css/: custom-dark.css  custom-styles.css  custom-vars.css
book/theme/js/: custom.js
docs/: ARCHITECTURE.md  CHANGELOG_CONSTANTS.md  DEBUG_PANEL.md  DEVELOPMENT_OVERVIEW.md  IMPLEMENTATION_PLAN.md  PRD.md  PRE_COMMIT.md  README.md  SECURITY_CHANGELOG.md  SUMMARY.md  SYSTEM_DESCRIPTION.md  TAURI_PLUGINS.md  book.toml  speakr-tauri_lib-rs_refactor.md
docs/refactor/: MIGRATION_NOTES_PHASE_5.md  README.md  RUST_DOCUMENTATION_TRACKING.md  SPEAKR-TAURI_LIB-RS_PHASE_1.md  SPEAKR-TAURI_LIB-RS_PHASE_2.md  SPEAKR-TAURI_LIB-RS_PHASE_3.md  SPEAKR-TAURI_LIB-RS_PHASE_4.md  SPEAKR-TAURI_LIB-RS_PHASE_5.md  _refactor-prompt.md  speakr-tauri_lib-rs_refactor.md
docs/specs/: FR-1-global-hotkey.md  FR-2-audio-capture.md  FR-3-transcription.md  FR-4-text-injection.md  FR-5-injection-fallback.md  FR-6-settings-ui.md  FR-7-status-events.md  FR-8-settings-persistence.md  FR-9-auto-update.md  INIT-01-project-scaffold.md  NFR-accessibility.md  NFR-compatibility.md  NFR-footprint.md  NFR-latency.md  NFR-reliability.md  NFR-security.md  README.md
docs/specs/reports/: FR-1-global-hotkey-report.md  FR-2-audio-capture-report.md  FR-2-report.md  FR-6-settings-ui-report.md  SPEAKR-TAURI_LIB-RS_PHASE_5.md  TEMPLATE.md  _report-prompt.md
docs/theme/: custom.css
scripts/: selective-tests.sh
speakr-core/: Cargo.toml  README.md
speakr-core/.cargo/: config.toml
speakr-core/src/: audio.rs  lib.rs  pipeline.rs
speakr-core/src/audio/: mod.rs
speakr-core/src/model/: list.rs  list_tests.rs  list_updater.rs  metadata.rs  mod.rs
speakr-core/src/transcription/: engine.rs  language.rs  mod.rs  models.rs  performance.rs
speakr-core/tests/: audio_capture.rs  model_availability.rs  model_manager.rs  performance_monitor.rs
speakr-tauri/: Cargo.toml  build.rs  tauri.conf.json
speakr-tauri/capabilities/: default.json
speakr-tauri/icons/: icon.icns
speakr-tauri/src/: lib.rs  main.rs  workflow.rs
speakr-tauri/src/audio/: files.rs  mod.rs  recording.rs
speakr-tauri/src/commands/: legacy.rs  mod.rs  system.rs  validation.rs
speakr-tauri/src/debug/: commands.rs  mod.rs  storage.rs  types.rs
speakr-tauri/src/services/: hotkey.rs  mod.rs  status.rs  types.rs
speakr-tauri/src/settings/: commands.rs  migration.rs  mod.rs  persistence.rs  traits.rs  validation.rs
speakr-tauri/tests/: audio_tests.rs  commands_tests.rs  debug_save.rs  global_hotkey.rs  hotkey_tests.rs  integration_tests.rs  settings_tests.rs  status_tests.rs  test_utils.rs  workflow_tests.rs
speakr-types/: Cargo.toml
speakr-types/src/: lib.rs
speakr-ui/: Cargo.toml  Trunk.toml  styles.css
speakr-ui/src/: app.rs  debug.rs  lib.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
