[package]
name = "speakr-core"
version = "0.1.0"
edition = "2021"
description = "Core library for the Speakr voice-to-text pipeline."

[[bin]]
name = "update-models"
path = "src/bin/update_models.rs"

[[bin]]
name = "update-models-tui"
path = "src/bin/update_models_tui.rs"

[dependencies]
# Audio capture for 16kHz mono streams
cpal = "0.15.3"
# Error handling with custom types
thiserror = "2.0.12"
# Structured logging instead of println!
tracing = "0.1.40"
# Async runtime for audio operations
tokio = { version = "1.40", features = [
    "rt-multi-thread",
    "time",
    "sync",
    "macros",
] }
whisper-rs = { version = "0.14.3", features = ["metal"] }
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
size = { version = "0.5.0", features = ["serde"] }
tempfile = "3.10.1"
# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.28.1"
# Enhanced logging
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-error = "0.2.0"
color-eyre = "0.6.3"
directories = "5.0.1"

[dev-dependencies]
# Async testing support
tokio-test = "0.4.4"
# Property-based testing
proptest = "1.4.0"
# Test utilities for audio streams
mockall = "0.12.1"
# Temporary directories for test isolation
tempfile = "3.10.1"
