[package]
name = "speakr-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "speakr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
speakr-types = { path = "../speakr-types" } # Shared data types
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2" # Global hot-key registration support
thiserror = "1.0" # Error handling for hot-key operations
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0" # Cross-platform directory access
tauri-plugin-store = "2"
tracing = "0.1.41"
tokio = { version = "1", features = [
    "time",
] } # Async runtime for debug commands
chrono = { version = "0.4", features = [
    "serde",
] } # Timestamps for debug log messages

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.0"                                                    # Temporary directories for testing

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
