[package]
name = "speakr-ui"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.8.4", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# Additional dependencies for Settings UI and Tauri integration
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "EventTarget",
    "HtmlInputElement",
] }
thiserror = "1.0"
serde_json = "1.0"
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
